--- a/Internet.html
+++ b/Internet.html
@@ -1,11 +1,62 @@
-<htlm>
+<html>
 	<head>
  		<title> Sejarah Internet </title>
+ 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
+
 	<body> 
-	<h1 style="text-align:center;">Sejarah Internet</h1>
-	<p>Internet (kependekan dari interconnection-networking) adalah seluruh jaringan komputer yang saling terhubung menggunakan standar <a href="https://id.wikipedia.org/wiki/Sistem">System, </a><a href="https://id.wikipedia.org/wiki/Dunia">Golobal, </a> <a href="https://id.wikipedia.org/wiki/Transmission_Control_Protocol">Transmision Control Protokol /</a> <a href="https://id.wikipedia.org/wiki/Protokol_Internet">Internet Protokol</a>  Suite (TCP/IP) sebagai protokol pertukaran paket (packet switching communication protocol) untuk melayani miliaran pengguna di seluruh dunia.Rangkaian internet yang terbesar dinamakan Internet. Cara menghubungkan rangkaian dengan kaidah ini dinamakan internetworking (“antarjaringan”).
-	<h2 s>Sejarah Internet</h2>
-	<img src="index.jpg">
+	<header >
+		<h2>BlackWings</h2>
+	</header>
+	<hr/>
+	<nav >	
+			<ul>
+				<li><a href="/Home/">Halaman Utama</a></li>	
+				<li><a href="/gallery/">Gallery</a>	</li>
+				<li><a href="/contact">Conract</a>
+			</ul>			
+	</nav>
+<div class="left">	
+	<h1>Sejarah Internet</h1>
+
+	<p>	<b>Internet</b>(kependekan dari interconnection-networking) adalah seluruh jaringan komputer yang saling terhubung menggunakan standar <a href="https://id.wikipedia.org/wiki/Sistem">System, </a><a href="https://id.wikipedia.org/wiki/Dunia">Golobal, </a> <a href="https://id.wikipedia.org/wiki/Transmission_Control_Protocol">Transmision Control Protokol /</a> <a href="https://id.wikipedia.org/wiki/Protokol_Internet">Internet Protokol</a>  Suite (TCP/IP) sebagai protokol pertukaran paket (packet switching communication protocol) untuk melayani miliaran pengguna di seluruh dunia.Rangkaian internet yang terbesar dinamakan Internet. Cara menghubungkan rangkaian dengan kaidah ini dinamakan internetworking (“antarjaringan”).
+
+	<h2 >Sejarah Internet</h2>
+		<center>
+	 <img src="index.jpg" style=" text-align: center;">
+	 </center>
+	<p>	Internet merupakan jaringan komputer yang dibentuk oleh Departemen Pertahanan Amerika Serikat pada tahun 1969, melalui proyek ARPA yang disebut ARPANET (Advanced Research Project Agency Network), di mana mereka mendemonstrasikan bagaimana dengan hardware dan software komputer yang berbasis UNIX, kita bisa melakukan komunikasi dalam jarak yang tidak terhingga melalui saluran telepon<br></p>	
+
+	<p>	Proyek ARPANET merancang bentuk jaringan, kehandalan, seberapa besar informasi dapat dipindahkan, dan akhirnya semua standar yang mereka tentukan menjadi cikal bakal pembangunan protokol baru yang sekarang dikenal sebagai TCP/IP (Transmission Control Protocol/Internet Protocol).<br></p>
+
+	<p>Tujuan awal dibangunnya proyek itu adalah untuk keperluan militer. Pada saat itu Departemen Pertahanan Amerika Serikat (US Department of Defense) membuat sistem jaringan komputer yang tersebar dengan menghubungkan komputer di daerah-daerah vital untuk mengatasi masalah bila terjadi serangan nuklir dan untuk menghindari terjadinya informasi terpusat, yang apabila terjadi perang dapat mudah dihancurkan<br></p>
+
+	<p>Pada mulanya ARPANET hanya menghubungkan 4 situs saja yaitu Stanford Research Institute, University of California, Santa Barbara, University of Utah, di mana mereka membentuk satu jaringan terpadu pada tahun 1969, dan secara umum ARPANET diperkenalkan pada bulan Oktober 1972. Tidak lama kemudian proyek ini berkembang pesat di seluruh daerah, dan semua universitas di negara tersebut ingin bergabung, sehingga membuat ARPANET kesulitan untuk mengaturnya.<br></p>
+
+	<p>Oleh sebab itu ARPANET dipecah manjadi dua, yaitu “MILNET” untuk keperluan militer dan “ARPANET” baru yang lebih kecil untuk keperluan non-militer seperti, universitas-universitas. Gabungan kedua jaringan akhirnya dikenal dengan nama DARPA Internet, yang kemudian disederhanakan menjadi Internet. 🙂<br></p>
+
+	<p><b><i>Sumber : https://id.wikipedia.org/wiki/Internet</i></b></p>
+	</div>
+	<div class="rigth">
+		<h1 style="border-top: 1px solid red; border-bottom: 1px solid red;">Daftar isi</h1>
+
+		<ul style="font-size: 18px">
+				<li>Halaman Utama</a></li>	
+				<li>Gallery</a>	</li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+				<li>Conract</a> </li>
+			</ul>			
+	</div>
+	<div class="batas"></div>
+	<div id="footer"><p>Copyright &copy; 2018 - All Rights Reserved</p></div>
 	</body>
 </html>
