--- a/login.html
+++ b/login.html
@@ -2,18 +2,29 @@
 <html>
 <head>
 	<title>Form Login</title>
+	<link rel="stylesheet" type="text/css" href="style_login.css">
 </head>
 <body>
-	<h1>FORM LOGIN</h1>
- 		<p>Silahkan anda login di from berikut ini untuk mengunakan sistem akademik di Universitas Amikom Yogyakarta</p>
-	<form>
-		User name:<br>
-		<input type="text" name="username"><br></input>
-		User password:<br>
-		<input type="password" name="psw"><br></input>
-		<input type="checkbox" name="kotak1" value="cek"> Ingat saya<br></input>
-		<input type="button" onclick="alert('login sukses')" value="Login"></input>
+	<div class="konten">
+		<div class="kepala">
+			<h2 class="judul">FORM LOGIN</h2>
+			<p class="paraf">Silahkan anda login di from berikut ini untuk mengunakan sistem akademik di Universitas Amikom Yogyakarta</p>
+		</div>
+		<div class="artikel">
+			
+			<form>
+					User name:<br>
+					<input type="text" name="username"><br></input>
+					User password:<br>
+					<input type="password" name="psw"><br></input>
+					<input type="checkbox" name="kotak1" value="cek"> Ingat saya<br></input>
+					<input type="button" onclick="alert('login sukses')" value="Login"></input>
 
-	</form>
+				</form>
+				
+		</div>
+	</div>
+	
+ 			
 </body>
 </html>
