--- a/tabel.html
+++ b/tabel.html
@@ -1,10 +1,13 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style_tabel.css">
 	<title>Tabel</title>
 </head>
 <body>
+<marquee bgcolor="white" width="100%">
+<h1>Tabel Pekerja 2016</h1>
+</marquee>
 <table>
 	<tr>
 		<th>Name</th>
