--- a/home.html
+++ b/home.html
@@ -2,14 +2,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
   <link rel="stylesheet" type="text/css" href="boostrap/style.css">
-  <link rel="stylesheet" type="text/css" href="boostrap/web-fonts-with-css/css/fontawesome-all.css">
-  <script type="text/javascript" src="boostrap/js/bootstrap.js"></script>
-  <link rel="stylesheet" type="text/css" href="boostrap/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="boostrap\fa\web-fonts-with-css\css\fontawesome-all.css">
+  <link rel="stylesheet" type="text/css" href="boostrap\css\bootstrap.css">
     <meta charset="utf-8">
+    <script>
+  	var app = angular.module("myApp", ["ngRoute"]);
+  	app.config(function($routeProvider){
+  		 $routeProvider
+    .when("/", {
+        templateUrl : "main.htm"
+    })
+    .when("/about",{
+    	templateUrl : "about.htm"
+    })
+  	});
+  </script>
   </head>
   <body>
-  	<div class="container">
+  	<div ng-app="myApp" class="container">
 	<div class="row">
 		<div class="col-md-12 header">
 			<h1>Titel of web</h1>
@@ -17,23 +30,10 @@
 	</div>	
 		<div class="row">
 			<div class="col-md-12 menu">
-				some menu will bepalce here!
+				<i class="fas fa-home"></i><a href="#!"> Home</a> |<a href="#!about"> about</a> | productiv | contac
 			</div>
 			</div>
+			<div><ng-view></ng-view></div>
 			
-			<div class="row">
-				<div class="col-md-4">
-						
-					<div class="alert alert-success" role="alert">scsc</div>
-					<p>dfssfdsfdsfdssdf</p>
-				</div>
-				<div class="col-md-4">
-					<div class="alert alert-success" role="alert">scsc</div>
-					<p>dfssfdsfdsfdssdf</p>
-				</div>
-				<div class="col-md-4">
-					<div class="alert alert-success" role="alert">scsc</div>
-					<p>dfssfdsfdsfdssdf</p>
-				</div>
-			</div>
+ <body>			
 </html>
