--- a/about.htm
+++ b/about.htm
@@ -1,5 +1,7 @@
-<div class="row">
+<div class="row" >
 <div class="col-md-12">
-	<p>sdasdasd</p>
+	<p>suhu :{{info.main.temp}}</p>
+	<h1>weater</h1>
+
 </div>
 </div>
