--- a/main.htm
+++ b/main.htm
@@ -1,15 +1,16 @@
 <div class="row">
 				<div class="col-md-4">
+				<h1></h1>
 						
 					<div class="alert alert-success" role="alert">scsc</div>
-					<p>dfssfdsfdsfdssdf</p>
+					<p>{{text1}}</p>
 				</div>
 				<div class="col-md-4">
 					<div class="alert alert-success" role="alert">scsc</div>
-					<p>dfssfdsfdsfdssdf</p>
+					<p>{{text2}}</p>
 				</div>
 				<div class="col-md-4">
 					<div class="alert alert-success" role="alert">scsc</div>
-					<p>dfssfdsfdsfdssdf</p>
+					<p>{{text3}}</p>
 				</div>
 			</div>
